--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,18 @@
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_data">Add Data</string>
+    <string name="answer_three">Answer Three</string>
+    <string name="answer_four">Answer Four</string>
+    <string name="answer_two">Answer Two</string>
+    <string name="answer_one">Answer one</string>
+    <string name="right_ans">Right Ans</string>
+    <string name="main_question">Main Question</string>
+    <string name="writer_name">Writer Name</string>
+    <string name="chapter_name">Chapter Name</string>
+    <string name="chapter_no">Chapter no</string>
+    <string name="subject_name">Subject Name</string>
+    <string name="adddata">Add Data</string>
 
 
 </resources>
