edit from customized

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -3,4 +3,5 @@
     <string name="add_data">Add Data</string>
     <string name="answer_three">Answer Three</string>
     <string name="answer_one">Answer one</string>
+    <string name="download">Download</string>
 </resources>
