--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="chapter_no">Chapter no</string>
     <string name="subject_name">Subject Name</string>
     <string name="adddata">Add Data</string>
+    <string name="download">Download</string>
 
 
 </resources>
