--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -4,4 +4,5 @@
     <string name="answer_three">Answer Three</string>
     <string name="answer_one">Answer one</string>
     <string name="download">Download</string>
+    <string name="read_offline">Read Offline</string>
 </resources>
